<resources>
    <string name="app_name">QuizzApp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="link_siteul_nostru">
        <a href="https://www.google.com/">Have any questions?</a>
    </string>
    <string name="nav_account">My Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Log out</string>
    <string name="error_text">Ups</string>
    <string name="button_meniu_principal_categorii">Categories</string>
    <string name="button_meniu_principal_newsfeed">News Feed</string>
    <string name="button_meniu_principal_crearetest">Create Test</string>
    <string name="category_title">My Category</string>
    <string name="button_showTest">Tests</string>
    <string name="button_showQuestions">Questions</string>
    <string name="MyCategory">Category</string>
    <string name="button_meniu_student_search">Search</string>
    <string name="button_meniu_student_myTests">My Tests</string>
    <string name="button_meniu_student_startTest">Start a test</string>
    <string name="textview">Search for categories/teachers</string>
    <string name="text_pin">Test PIN</string>
    <string name="enterTest">ENTER</string>
    <string name="email">Scobby@gmail.com</string>
    <string name="username_menu">Scooby Doo</string>
    <string name="esti_student">Esti student?</string>
    <string name="buttonEditTest">Edit</string>
    <string name="shareTest">Share</string>
    <string name="deleteTest">Delete</string>
    <string name="TextQuestion">Text:</string>
    <string name="ScoreQuestion">Score:</string>
    <string name="score">Score: 0</string>
    <string name="contor_intrebari">Question: 1/x</string>
    <string name="timp">00:30</string>
    <string name="question_text">Question text</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="confirm">Confirm</string>
    <string name="Search_test">Do you want to search for a test?</string>
    <string name="start_test_provizoriu">Start test</string>
    <string name="option_4">Option 4</string>
    <string name="submit">Submit</string>
    <string name="time_remaining">Time remaining</string>
    <string name="hint_nrQuestions">Nr of questions</string>
    <string name="hint_type">Type</string>
    <string name="hint_times">Time(seconds)</string>
    <string name="hint_score">Score</string>
    <string name="hint_qtext">Question text</string>
    <string name="question_form_title">New Question</string>
    <string name="b_nexts_t">Next</string>
    <string name="title_form_answers">Answers</string>
    <string name="b_next_ans">Next</string>
    <string name="b_finish_ans">Next</string>
    <string name="hint_anstext">Answer text</string>
    <string name="ans_tag">Is correct?</string>
    <string name="hint_nrquestions">Nr. Questions</string>
    <string name="b_form_nr_question">Next</string>
    <string name="username_form">Username</string>
    <string name="password_hint">Password</string>
    <string name="repeatPass_hint">Repeat Password</string>
    <string name="email_hint_create">Email</string>
    <string name="rb_teacher_op">Profesor</string>
    <string name="op_student_tag">Student</string>
    <string name="Create_acc_string">Create</string>
    <string name="title_new_account">New Account</string>
    <string name="createnewaccounttext">Create new account</string>
    <string name="raports_tag_b">Raports</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">Next</string>
    <string name="result_tile">Result</string>
    <string name="score_finish">Final score:</string>
    <string name="backfinish">Back  to menu</string>
    <string name="result_title_finish">Result</string>
    <string name="tag_statistics">Statistics</string>
    <string name="ButtonStatShow">Show</string>
    <string name="statisticTitleShow">Statistics</string>


</resources>
