<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:background="@color/albastru3">

    <EditText
        android:id="@+id/username_newaccount"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:hint="@string/username_form"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_newaccount"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_newaccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatpass_newaccount"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_newaccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:hint="@string/repeatPass_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email_newaccount"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeatpass_newaccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:hint="@string/email_hint_create"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/group_prof_student"
        android:layout_width="294dp"
        android:layout_height="57dp"
        android:layout_below="@+id/email_newaccount"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="42dp">

        <RadioButton
            android:id="@+id/profesor_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rb_teacher_op" />

        <RadioButton
            android:id="@+id/student_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/op_student_tag" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:background="@drawable/edit_round_albastru_deschis"
        android:text="@string/Create_acc_string"
        android:textColor="#2121b1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="108dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="76dp"
        android:text="@string/title_new_account"
        android:textSize="28dp" />

</RelativeLayout>