<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameTest"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="Name Test"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:text="@string/buttonEditTest" />

    <Button
        android:id="@+id/deleteTestButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:text="@string/deleteTest" />

    <Button
        android:id="@+id/shareTestButton"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:text="@string/shareTest" />

    <TextView
        android:id="@+id/publicStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="TextView" />

    <Button
        android:id="@+id/codeButton"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_row="1"
        android:layout_column="2"
        android:text="Code" />
</GridLayout>