<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinishTestActivity"
    android:background="@color/albastru2">

    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="104dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="126dp"
        android:text="@string/result_title_finish"
        android:textSize="30dp"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="105dp"
        tools:text="@string/result_tile" />

    <TextView
        android:id="@+id/score"
        android:layout_width="139dp"
        android:layout_height="47dp"
        android:layout_below="@+id/resultTitle"
        android:layout_alignStart="@+id/resultTitle"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-23dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="113dp"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/resultTitle"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginBottom="105dp"
        android:text="@string/backfinish" />
</RelativeLayout>