<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartTest"
    android:background="@color/albastru3">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="94dp"
        android:layout_alignEnd="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/nav_logout"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="40sp"
        android:layout_centerInParent="true"
        android:hint="@string/text_pin"
        android:textSize="30sp"
        android:background="@drawable/edit_round2"
        android:gravity="center"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="40sp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="183dp"
        android:background="@drawable/edit_round3"
        android:gravity="center"
        android:text="@string/enterTest"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:text="
        Do you want
  to search for a test?"
        android:textColor="@color/alb_murdar"
        android:textSize="15sp" />

</RelativeLayout>