<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeniuProfesorActivity"
    android:background="@color/backgroud">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="seeCategories"
            android:text="@string/button_meniu_principal_categorii"
            android:background="@drawable/edit_round"
            android:textSize="20sp"/>


        <Button
            android:id="@+id/button10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/button_meniu_principal_crearetest"
            android:onClick="onClickCreateTest"
            android:background="@drawable/edit_round"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>


    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/button_meniu_principal_newsfeed"
        android:onClick="onClickNewsfeed"
        android:background="@drawable/edit_round"
        android:textSize="20sp"/>

    </LinearLayout>



    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/menu_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>